ajout de 3 composants navbar productList et footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<h1>Bienvenue {{name}} dans Angular 7</h1>
+<app-navbar></app-navbar>
+<div class="container-fluid">
+  <app-products-list></app-products-list>
+  <app-fouter></app-fouter>
+</div>
+
+
